--- a/app/src/main/res/layout/fragment_fourth.xml
+++ b/app/src/main/res/layout/fragment_fourth.xml
@@ -1,92 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.FourthFragment">
+    tools:context="com.fiap.vivo.view.FourthFragment">
 
     <TextView
-        android:id="@+id/saudacao"
-        android:layout_width="213dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="112dp"
-        android:layout_marginBottom="55dp"
-        android:text="Seja Bem-Vindo(a)"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/nome"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/dashboardPageTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/dashboard_page_welcome_title"
+        style="@style/default.layout.title"/>
 
     <TextView
-        android:id="@+id/nome"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="9dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="13dp"
-        android:text="TextView"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/cpfOUcnpj"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/saudacao" />
+        android:id="@+id/dashboardPageName"
+        android:layout_below="@id/dashboardPageTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/default.layout.text"/>
 
     <TextView
-        android:id="@+id/cpfOUcnpj"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="16dp"
-        android:text="TextView"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/email"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nome" />
+        android:id="@+id/dashboardPageCpfCnpj"
+        android:layout_below="@id/dashboardPageName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/default.layout.text"/>
 
     <TextView
-        android:id="@+id/email"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="13dp"
-        android:text="TextView"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/plano"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cpfOUcnpj" />
+        android:id="@+id/dashboardPageEmail"
+        android:layout_below="@id/dashboardPageCpfCnpj"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/default.layout.text"/>
 
     <TextView
-        android:id="@+id/plano"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="17dp"
-        android:text="TextView"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/situacao"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email" />
+        android:id="@+id/dashboardPagePlan"
+        android:layout_below="@id/dashboardPageEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/default.layout.text"/>
 
     <TextView
-        android:id="@+id/situacao"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="137dp"
-        android:text="TextView"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/plano" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:id="@+id/dashboardPageSituation"
+        android:layout_below="@id/dashboardPagePlan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/default.layout.text"/>
+</RelativeLayout>
