--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.fiap.vivo.view.SecondFragment">
+        tools:context="com.fiap.vivo.view.LoginScreen">
 
         <TextView
             android:id="@+id/loginPageTitle"
