--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.fiap.vivo.view.FirstFragment"
+        android:name="com.fiap.vivo.view.InitialScreen"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        tools:layout="@layout/initial_screen">
 
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
@@ -20,9 +20,9 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="com.fiap.vivo.view.SecondFragment"
+        android:name="com.fiap.vivo.view.LoginScreen"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        tools:layout="@layout/login_screen">
 
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
@@ -33,18 +33,18 @@
     </fragment>
     <fragment
         android:id="@+id/thirdFragment2"
-        android:name="com.fiap.vivo.view.ThirdFragment"
+        android:name="com.fiap.vivo.view.RegistrationScreen"
         android:label="fragment_third"
-        tools:layout="@layout/fragment_third" >
+        tools:layout="@layout/registration_screen" >
         <action
             android:id="@+id/action_thirdFragment2_to_FirstFragment"
             app:destination="@id/FirstFragment" />
     </fragment>
     <fragment
         android:id="@+id/fourthFragment"
-        android:name="com.fiap.vivo.view.FourthFragment"
+        android:name="com.fiap.vivo.view.DashboardScreen"
         android:label="fragment_fourth"
-        tools:layout="@layout/fragment_fourth" >
+        tools:layout="@layout/dashboard_screen" >
         <action
             android:id="@+id/action_fourthFragment_to_FirstFragment"
             app:destination="@id/FirstFragment" />
