--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -26,7 +25,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="15dp"
             android:background="@drawable/menu"
-            app:popupTheme="@style/Theme.VivoN.PopupOverlay" />
+            app:popupTheme="@style/Theme.Vivo.PopupOverlay" />
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -34,7 +33,7 @@
             android:layout_height="40dp"
             android:layout_gravity="center_vertical|end"
             android:layout_marginEnd="15dp"
-            app:popupTheme="@style/Theme.VivoN.PopupOverlay" />
+            app:popupTheme="@style/Theme.Vivo.PopupOverlay" />
     </FrameLayout>
 
     <LinearLayout
@@ -65,6 +64,6 @@
             android:fontFamily="@font/baloo_bhai"
             android:textColor="@color/primary"
             android:text="@string/footer_text"
-            android:textSize="30dp" />
+            android:textSize="30sp" />
     </FrameLayout>
 </RelativeLayout>
