--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.VivoN" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Vivo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,25 +14,25 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.VivoN.NoActionBar">
+    <style name="Theme.Vivo.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.VivoN.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-    <style name="Theme.VivoN.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.Vivo.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.Vivo.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="default.layout.title" parent="TextAppearance.AppCompat.Large">
         <item name="android:textColor">@color/primary</item>
         <item name="android:fontFamily">@font/baloo_bhai_2</item>
-        <item name="android:textSize">30dp</item>
+        <item name="android:textSize">30sp</item>
         <item name="lineHeight">40dp</item>
     </style>
 
     <style name="default.layout.text" parent="TextAppearance.AppCompat.Small">
         <item name="android:textColor">@color/black</item>
         <item name="android:fontFamily">@font/baloo_bhai_2</item>
-        <item name="android:textSize">20dp</item>
+        <item name="android:textSize">20sp</item>
         <item name="lineHeight">20dp</item>
         <item name="android:layout_marginTop">30dp</item>
         <item name="android:layout_marginBottom">15dp</item>
@@ -41,7 +41,7 @@
     <style name="default.layout.button.primary" parent="TextAppearance.AppCompat.Button">
         <item name="android:backgroundTint">@color/primary</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">20dp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:paddingVertical">8dp</item>
         <item name="android:radius">10dp</item>
         <item name="android:layout_marginVertical">30dp</item>
